examples/test/testpolicy6824.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy6824
  namespace: namespace108
spec:
  podSelector:
    matchLabels:
      key35: value3
      key37: value13
      key24: value39
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key24: value10
      podSelector:
        matchLabels:
          key6: value40
